quick index update

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
-    <title>Draw With Me!</title>
+    <title>Inputjs Tests</title>
   </head>
   <body>
-    <div id="drawing"></div>
+    <h1>Inputjs Testing</h1>
+    <p>This HTML file is a blank slate for testing Inputjs as I develop it.</p>
+    <p>The div below is for playing with:</p>
+    <div id="app"/>
   </body>
 </html>
