--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Inputjs Tests</title>
   </head>
   <body>
     <h1>Inputjs Testing</h1>
     <p>This HTML file is a blank slate for testing Inputjs as I develop it.</p>
     <p>The div below is for playing with:</p>
-    <div id="app"/>
+    <div id="app" />
   </body>
 </html>
