--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <h1>Inputjs Testing</h1>
     <p>This HTML file is a blank slate for testing Inputjs as I develop it.</p>
     <p>The div below is for playing with:</p>
-    <div id="app" />
+    <div id="app"></div>
   </body>
 </html>
